Bug 362471 - mail outgoing accounts has random order, changing on every kmail start
Summary: mail outgoing accounts has random order, changing on every kmail start
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-29 11:37 UTC by Martin Koller
Modified: 2016-04-29 12:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2016-04-29 11:37:34 UTC
When composing a new mail and trying to select a specific outgoing account, I see that whenever I restart kmail, the order of the accounts listed in the toolbar- button-popup (long press on "Send") is in a different random order, which makes selecting one out of six I have configured always a bit cumbersome.

Reproducible: Always



Expected Results:  
Whatever order I don't really care but please keep the order the same every time kmail starts.
Comment 1 Laurent Montel 2016-04-29 12:04:33 UTC
Git commit 4140b53a2963f0ae4027d2e69e05f9a8bf5e9406 by Montel Laurent.
Committed on 29/04/2016 at 12:04.
Pushed by mlaurent into branch 'Applications/16.04'.

Fix Bug 362471 - mail outgoing accounts has random order, changing on every kmail start

FIXED-IN:5.2.1

M  +11   -3    kmail/widgets/kactionmenutransport.cpp

http://commits.kde.org/kdepim/4140b53a2963f0ae4027d2e69e05f9a8bf5e9406