Fix Bug 362471 - mail outgoing accounts has random order, changing on every kmail start

FIXED-IN:5.2.1
BUG: 362471